--- a/app/views/generic_files/_show_actions.html.erb
+++ b/app/views/generic_files/_show_actions.html.erb
@@ -1,6 +1,8 @@
 <h2 class="non lower">Actions</h2>
 <p>
-	<%= render_download_link %>
+	<% if can? :read, @generic_file %>
+	  <%= render_download_link "Download full image" %>
+	<% end %>
 	<% if can? :edit, @generic_file %>
     &nbsp;|&nbsp;
 		<% if @generic_file.processing? %>
@@ -9,7 +11,4 @@
 			<%= link_to "Edit", sufia.edit_generic_file_path(@generic_file) %>
 		<% end %>
 	<% end %>
-</p>
-<p>Export to	
-  <%= link_to "Endnote", sufia.generic_file_path(@generic_file, format: 'endnote') %>
 </p>
