Make collection and member titles linkable

--- a/app/views/collections/collection/_metadata.html.erb
+++ b/app/views/collections/collection/_metadata.html.erb
@@ -1,2 +1,2 @@
-<h3><%= member.title %></h3>
+<h3><%= link_to member.title, collections.collection_path(member.id) %></h3>
 <p><%= member.description %></p>
