Change breadcrumb display
Instead of the stock breadcrumbs when doing a browse the interface should
build up the trail of breadcrumbs. This is a first cut; ideally it should be
done on the fly in case you wind up somehow in a circumstance where you have
multiple collections owning an item

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -1,6 +1,8 @@
 <% @page_title = "#{@collection.title} - #{application_name}" %>
 
-  <div itemscope itemtype="http://schema.org/CollectionPage" class="row">
+<%= breadcrumbs_for @collection %>
+
+<div itemscope itemtype="http://schema.org/CollectionPage" class="row">
     <div class="col-sm-10 pull-right">
       <header>
         <h1><%= @presenter.title %></h1>
