--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -1,6 +1,5 @@
 <% @page_title = "#{@collection.title} - #{application_name}" %>
-
-<%= breadcrumbs_for @collection %>
+<%= render_breadcrumbs builder: Sufia::BootstrapBreadcrumbsBuilder %>
 
 <div itemscope itemtype="http://schema.org/CollectionPage" class="row">
     <div class="col-sm-10 pull-right">
