Calculate total bytes properly for collections

--- a/app/views/collections/collection/_metadata.html.erb
+++ b/app/views/collections/collection/_metadata.html.erb
@@ -5,5 +5,5 @@
   <dd><%= member.members.count %></dd>
  
   <dt>Size<dt/>
-  <dd><%= number_to_human_size(4551454341241244) %></dd>
+  <dd><%= number_to_human_size(member.bytes) %></dd>
 </dl>
