--- a/app/views/catalog/_gallery_header_default.html.erb
+++ b/app/views/catalog/_gallery_header_default.html.erb
@@ -1,5 +1,6 @@
 <div class="documentHeader row">
-  <h5 class="index_title document-title-heading col-sm-9 col-lg-10">
-    <%= document.title %>
-  </h5>
+  <h4 class="index_title document-title-heading col-sm-9 col-lg-10">
+    <%= link_to document.title, collections.collection_path(document.id) %>
+  </h4>
+  <p><%= document.description %></p>
 </div>
