--- a/app/views/collections/generic_file/_metadata.html.erb
+++ b/app/views/collections/generic_file/_metadata.html.erb
@@ -1,4 +1,4 @@
 <h3><%= link_to member.title.first, sufia.generic_file_path(member.id) %></h3>  
 <p><%= member.description.first %></p>
 
-<p><em><%= member.import_url %></em></p>
+<p><em><%= member.source.first %></em></p>
