First cut at a more tabular display

--- a/app/views/generic_files/_show_actions.html.erb
+++ b/app/views/generic_files/_show_actions.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="list-unstyled">
 	<% if can? :read, @generic_file %>
       <li>
          <a href="#" class="preview-link">Preview image 
