--- a/app/views/generic_files/_media_display.html.erb
+++ b/app/views/generic_files/_media_display.html.erb
@@ -1,33 +1,9 @@
 <% if @generic_file.image? %>
-
-  <%= render_download_icon "Download the full-sized image" %>
-
-<% elsif @generic_file.video? %>
-
-  <video controls="controls" class="video-js vjs-default-skin" data-setup="{}" preload="auto">
-    <source src="<%= sufia.download_path(@generic_file, file: 'webm') %>" type="video/webm" />
-    <source src="<%= sufia.download_path(@generic_file, file: 'mp4') %>" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
-
-<% elsif @generic_file.audio? %>
-
-  <audio controls="controls" class="audiojs" preload="auto">
-    <source src="<%= sufia.download_path(@generic_file, file: 'ogg') %>" type="audio/ogg" />
-    <source src="<%= sufia.download_path(@generic_file, file: 'mp3') %>" type="audio/mpeg" />
-    Your browser does not support the audio tag.
-  </audio>
-
+  <%= render_preview_icon @generic_file %>
 <% elsif @generic_file.pdf? %>
-
-  <%= render_download_icon "Download the full-sized PDF" %>
-
+  <%= render_download_icon "Download PDF" %>
 <% elsif @generic_file.office_document? %>
-
-    <%= render_download_icon "Download the full-sized Document" %>
-
+    <%= render_download_icon "Download document" %>
 <% else %>
-
   <%= render_download_icon %>
-
 <% end %>
