--- a/app/views/generic_files/_show_descriptions.html.erb
+++ b/app/views/generic_files/_show_descriptions.html.erb
@@ -1,7 +1,11 @@
 <h2>Descriptions</h2>
-<dl class="dl-horizontal file-show-term file-show-descriptions">
+<table class="table table-striped">
+  <tbody>
   <% present_terms(@presenter,@presenter.terms - [:title, :description]) do |r, term| %>
-  <dt><%= r.label(term) %></dt>
-      <dd><%= r.value(term) %></dd>
+    <tr>
+      <th><%= r.label(term) %></th>
+      <td><%= r.value(term) %></td>
+    </tr>
   <% end %>
-</dl>
+  </tbody>
+</table>
