--- a/app/views/generic_files/_show_details.html.erb
+++ b/app/views/generic_files/_show_details.html.erb
@@ -1,22 +1,25 @@
 <h2>File Details</h2>
-<dl class="dl-horizontal file-show-term file-show-details">
-  <dt>Depositor</dt>
-  <dd itemprop="accountablePerson" itemscope itemtype="http://schema.org/Person"><span itemprop="name"><%= link_to_profile @generic_file.depositor %></span></dd>
-  <dt>Date Uploaded</dt>
-  <dd itemprop="datePublished"><%= @generic_file.date_uploaded %></dd>
-  <dt>Date Modified</dt>
-  <dd itemprop="dateModified"><%= @generic_file.date_modified %></dd>
-  <dt>Audit Status</dt>
-  <dd><%= @audit_status %></dd>
-  <% unless @generic_file.related_files.empty? %>
-  <dt>Related Files</dt>
-      <% @generic_file.related_files.each do |f| %>
-          <dd><%= link_to(f.label, sufia.generic_file_url(f)) %></dd>
-      <% end %>
-  <% end %>
-  <dt>Characterization</dt>
-  <dd>
-    <%= "not yet characterized" if @generic_file.characterization_terms.values.flatten.map(&:empty?).reduce(true) { |sum, value| sum && value } %>
+<table class="table table-striped">
+<tbody>
+  <tr>
+    <th>Depositor</th>
+    <td itemprop="accountablePerson" itemscope itemtype="http://schema.org/Person"><span itemprop="name"><%= @generic_file.depositor %></span></td>
+  </tr>
+
+  <tr>
+    <th>Date Uploaded</th>
+    <td itemprop="datePublished"><%= @generic_file.date_uploaded %></td>
+  </tr>
+
+  <tr>
+    <th>Date Modified</th>
+    <td itemprop="dateModified"><%= @generic_file.date_modified %></td>
+  </tr>
+
+  <tr>
+    <th>Characterization</th>
+    <td>
+    <%= "Not yet characterized" if @generic_file.characterization_terms.values.flatten.map(&:empty?).reduce(true) { |sum, value| sum && value } %>
     <% @generic_file.characterization_terms.each_pair do |term, values| %>
         <div>
           <% label = term.to_s %>
@@ -41,5 +44,7 @@
           <% end %>
         </div>
     <% end %>
-  </dd>
-</dl>
+    </td>
+  </tr>
+</tbody>
+</table>
