--- a/app/views/generic_files/show.html.erb
+++ b/app/views/generic_files/show.html.erb
@@ -11,6 +11,7 @@
     <p class="genericfile_description"><%= display_multiple @presenter.description %></p>
     <%= render 'show_descriptions' %>
     <%= render 'show_details' %>
+    <%= render 'show_audits' %>
   </div><!-- /columns second -->
 </div> <!-- /.row -->
 </div><!-- /.container-fluid -->
