--- a/app/views/generic_files/_show_actions.html.erb
+++ b/app/views/generic_files/_show_actions.html.erb
@@ -1,12 +1,12 @@
 <ul class="list-unstyled">
 	<% if can? :read, @generic_file %>
       <li>
-         <a href="#" class="preview-link">Preview image 
-         <span class="glyphicon glyphicon-picture"></span></a>
+         <span class="action"><a href="#" class="preview-link">Preview image</span> 
+         <span class="icon glyphicon glyphicon-picture"></span></a>
       </li>
 	  <li>
-         <%= render_download_link "Download full image" %>
-         <span class="glyphicon glyphicon-hdd"></span>
+         <span class="action"><%= render_download_link "Download file" %></span>
+         <span class="icon glyphicon glyphicon-hdd"></span>
       </li>
 	<% end %>
 	<% if can? :edit, @generic_file %>
@@ -14,7 +14,7 @@
 		<% if @generic_file.processing? %>
 			<%= t('sufia.upload.processing') %>
 		<% else %>
-			<%= link_to "Edit", sufia.edit_generic_file_path(@generic_file) %>
+			<span class="action"><%= link_to "Edit", sufia.edit_generic_file_path(@generic_file) %></span>
             <span class="glyphicon glyphicon-edit"></span>
 		<% end %>
         </li>
