Minor UI tweaks

--- a/app/views/catalog/_gallery_details_generic_file.html.erb
+++ b/app/views/catalog/_gallery_details_generic_file.html.erb
@@ -5,7 +5,7 @@
   <dt>Subject(s)</dt>
   <dd>
     <%# TODO: Refactor this into a partial %>
-    <%= document.subject.each do |sub| %>
+    <% document.subject.each do |sub| %>
       <%= link_to_facet(sub, Solrizer.solr_name("subject", :facetable)) %>
       <br />
     <% end %>
