--- a/app/views/collections/generic_file/_metadata.html.erb
+++ b/app/views/collections/generic_file/_metadata.html.erb
@@ -1,4 +1,11 @@
 <h3><%= link_to member.title.first, sufia.generic_file_path(member.id) %></h3>  
 <p><%= member.description.first %></p>
-
 <p><em><%= member.source.first %></em></p>
+<% unless member.subject.empty? %>
+  <h4>Subjects</h4>
+  <ul class="list-unstyled">
+    <% member.subject.each do |subject| %>
+      <li><%= link_to_facet(subject, Solrizer.solr_name("subject", :facetable)) %></li>
+    <% end %>
+  </ul>
+<% end %>
