--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -1,5 +1,21 @@
+/**
+ * Global styles
+ */
+$cma-blue: #005cb9;
+
+#masthead, #footer {
+  background: $cma-blue;
+}
+
+/* Change color of thumbnails for collections from the default
+ * black / gray
+ */
+.collection-icon {
+  color: $cma-blue;
+}
+
 @media only screen and (min-width: 768px) {
 	#masthead {
-		min-height: 4em;
+	  min-height: 4em;
 	}
 }
