--- a/app/views/collections/collection/_row.html.erb
+++ b/app/views/collections/collection/_row.html.erb
@@ -3,6 +3,6 @@
   <td>
     <%= render_partial_for 'metadata', member %>
   </td>
-  <td><%= Date.parse(member.date_created.first).to_formatted_s(:concise) %></td>
-  <td><!-- No actions for collections --></td>
+  <td>&nbsp;</td>
+  <td>&nbsp;</td>
 </tr>
