--- a/app/views/collections/collection/_row.html.erb
+++ b/app/views/collections/collection/_row.html.erb
@@ -1,8 +1,8 @@
 <tr id="document_<%= member.id %>" %>
-  <td><%= render_collection_thumbnail member %></td>
+  <td><%= link_to render_collection_thumbnail(member), collections.collection_path(member) %></td>
   <td>
     <%= render_partial_for 'metadata', member %>
   </td>
-  <td>&nbsp;</td>
+  <td><%= member.date_created.first || "-" %> </td>
   <td>&nbsp;</td>
 </tr>
