--- a/app/views/generic_files/show.html.erb
+++ b/app/views/generic_files/show.html.erb
@@ -7,8 +7,8 @@
     <%= render 'show_collections' %>
   </div>
   <div itemscope itemtype="<%= @presenter.itemtype %>" class="col-xs-12 col-sm-8">
-    <h1 class="visibility"><%= display_multiple @presenter.title %></h1>
-    <p class="genericfile_description"><%= display_multiple @presenter.description %></p>
+    <h1 class="visibility"><%= display_primary @presenter.title %></h1>
+    <p class="genericfile_description"><%= display_primary @presenter.description %></p>
     <%= render 'show_descriptions' %>
     <%= render 'show_details' %>
     <%= render 'show_audits' %>
