--- a/app/views/collections/generic_file/_row.html.erb
+++ b/app/views/collections/generic_file/_row.html.erb
@@ -3,6 +3,6 @@
   <td>
    <%= render_partial_for 'metadata', member %>
   </td>
-  <td><%= Date.parse(member.date_created.first).to_formatted_s(:concise) %></td>
+  <td><%= member.date_created.first || "-" %></td>
   <td><%= render_partial_for 'actions', member %></td>
 </tr>
