--- a/app/views/generic_files/show.html.erb
+++ b/app/views/generic_files/show.html.erb
@@ -15,3 +15,5 @@
   </div><!-- /columns second -->
 </div> <!-- /.row -->
 </div><!-- /.container-fluid -->
+
+<%= render 'generic_files/lightbox_preview', local: {resource: @generic_file} %>
