--- a/app/assets/stylesheets/cma_archives.scss
+++ b/app/assets/stylesheets/cma_archives.scss
@@ -21,13 +21,14 @@
 
 .lightbox figure {
   position: relative;
-  width: 60%;
-  margin: auto 20%;
+  width: auto;
+  height: 100vh;
+  margin: 10vh auto;
 }
 
 .lightbox img {
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 80vh;
 }
 
 .lightbox figcaption {
@@ -35,7 +36,7 @@
   font-style: italic;
   position: absolute;
   width: 100%;
-  bottom: 0em;
+  bottom: 20vh;
   padding: 0.5em;
   left: 0;
   color: rgb(255, 255, 255);
