Add support for Internet Explorer 10

--- a/app/assets/stylesheets/cma_archives.scss
+++ b/app/assets/stylesheets/cma_archives.scss
@@ -47,9 +47,16 @@
  * Gallery view tweaks for search results
  */
 .flex-gallery {
+  display: -ms-flexbox;
   display: flex;
+
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+
+  -ms-align-items: flex-end;
   align-items: flex-end;
+
+  -ms-justify-content: stretch;
   justify-content: stretch;
 }
 
