--- a/app/views/homepage/_featured_collection.html.erb
+++ b/app/views/homepage/_featured_collection.html.erb
@@ -1,6 +1,10 @@
 <% solr_doc = featured_collection.collection_solr_document %>
 <div class="col-xs-6 col-sm-4 featured-collection">
   <%= render_collection_thumbnail featured_collection.collection_solr_document %>
-  <h3><%= link_to solr_doc.title, collections.collection_path(featured_collection.collection_id) %></h3>
+  <% if current_user.can?(:read, solr_doc) %>
+    <h3><%= link_to solr_doc.title, collections.collection_path(featured_collection.collection_id) %></h3>
+  <% else %>
+    <h3><%= solr_doc.title %></h3> 
+  <% end %>
   <p class="description"><%= solr_doc.description %></p>
 </div>
