Gray out any collections that are not accessible
Provide visual confirmation of which collections can be accessed just with
a glance. The light gray color is defined as a variable instead of directly
inheriting it from Bootstrap so that it can be further tweaked if need be

--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -5,6 +5,7 @@
 
 $cma-blue: #005cb9;
 $cma-brown: $brand-warning;
+$cma-gray: $gray-lighter;
 
 #masthead, #footer {
   background: $cma-blue;
@@ -16,6 +17,10 @@ $cma-brown: $brand-warning;
 .collection-icon {
   color: $cma-brown;
   text-align: center;
+}
+
+.collection-icon.disabled {
+  color: $cma-gray;
 }
 
 .featured-collection .collection-icon {
