--- a/app/views/collections/collection/_metadata.html.erb
+++ b/app/views/collections/collection/_metadata.html.erb
@@ -1,7 +1,7 @@
 <h3><%= link_to member.title, collections.collection_path(member.id) %></h3>
 <p><%= description_for_collection member %></p>
 <dl class="dl-horizontal">
-  <dt>Members</dt>
+  <dt>Items</dt>
   <dd><%= member.members.count %></dd>
  
   <dt>Size<dt/>
