--- a/app/views/collections/_view_type_group.html.erb
+++ b/app/views/collections/_view_type_group.html.erb
@@ -1,7 +1,7 @@
 <% if has_alternative_views? -%>
 <div class="view-type col-xs-12 col-sm-3 col-md-3">
   <span class="sr-only"><%= t('blacklight.search.view_title') %></span>
-  <div class="view-type-group btn-group">
+  <div class="view-type-group btn-group pull-right">
     <%  document_index_views.each do |view, config| %>
       <%= link_to collections.collection_path(params[:id], view: view), title: t("blacklight.search.view_title.#{view}", default: t("blacklight.search.view.#{view}", default: blacklight_config.view[view].title)), class: "btn btn-default view-type-#{ view.to_s.parameterize } #{"active" if document_index_view_type == view}" do %>
         <%= render_view_type_group_icon view %>
