--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -1,3 +1,6 @@
+<% html_class = current_page.last? ? "disabled" : "" %>
+
 <li>
-  <%= link_to_unless current_page.last?, raw(t 'views.pagination.last'), url, {:remote => remote} %>
+  <%= link_to fa_icon("step-forward"), url, class: html_class,
+        remote: remote %>
 </li>
