--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -1,3 +1,6 @@
+<% html_class = current_page.last? ? "disabled" : "" %>
+
 <li>
-  <%= link_to_unless current_page.last?, raw(t 'views.pagination.next'), url, :rel => 'next', :remote => remote %>
+  <%= link_to fa_icon("angle-double-right"), url, class: html_class, 
+     rel: 'next', remote: remote %> 
 </li>
