--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -1,3 +1,6 @@
+<% html_class = current_page.first? ? "disabled" : "" %>
+
 <li>
-  <%= link_to_unless current_page.first?, raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote %>
+  <%= link_to fa_icon("angle-double-left"), url, class: html_class, 
+       :rel => 'prev', :remote => remote %>
 </li>
