Rely on Solr as much as possible
Search and discovery was being bogged down by calls to to_model. This
refactoring, while a bit brittle, should help by relying on Solr for as
much as possible. A few problems have surfaced with date_created but these
can be solved by injecting new fields into the Solr index'

--- a/app/views/collections/_collection.html.erb
+++ b/app/views/collections/_collection.html.erb
@@ -2,13 +2,12 @@
   <h2>
     <%= link_to collection.title, collections.collection_path(collection) %>
   </h2>
-  <% collection_model = collection.to_model %>
   <div class="row">
     <div class="col-sm-3">
-      <%= render_collection_thumbnail collection_model %>
+      <%= render_collection_thumbnail collection %>
     </div>
     <div class="col-sm-9">
-      <%= render 'collections/attributes', work: collection_model %>
+      <%= render 'collections/attributes', work: collection %>
     </div>
   </div>
 </li>
