--- a/app/views/collections/collection/_row.html.erb
+++ b/app/views/collections/collection/_row.html.erb
@@ -3,6 +3,6 @@
   <td>
     <%= render_partial_for 'metadata', member %>
   </td>
-  <td><%= member.date_created.first || "-" %> </td>
+  <td><%= member.create_date || "-" %> </td>
   <td>&nbsp;</td>
 </tr>
