--- a/app/views/collections/generic_file/_metadata.html.erb
+++ b/app/views/collections/generic_file/_metadata.html.erb
@@ -1,5 +1,5 @@
-<h3><%= link_to member.title.first, sufia.generic_file_path(member.id) %></h3>  
-<p><%= member.description.first %></p>
+<h3><%= link_to member.title, sufia.generic_file_path(member.id) %></h3>  
+<p><%= member.description %></p>
 <% unless member.subject.empty? %>
   <h4>Subjects</h4>
   <ul class="list-unstyled">
