--- a/app/views/collections/_attributes.html.erb
+++ b/app/views/collections/_attributes.html.erb
@@ -1,6 +1,6 @@
 <dl class="dl-horizontal">
   <dt>Date created</dt>
-  <dd><%= work.date_created.present? ? work.date_created : "-" %></dd>
+  <dd><%= work.create_date.present? ? work.create_date : "-" %></dd>
   
   <dt>Description</dt>
   <dd><%= work.description || "-" %></dd>
