Truncate descriptions more than 80 characters long
To improve the layout for search results and collections browse truncate
descriptions to the first 80 characters. Because every item in a collection
shares the same description this should have a minimal impact except with a
heterogeneous mix of content such as a search for Photography

--- a/app/views/generic_files/_attributes.html.erb
+++ b/app/views/generic_files/_attributes.html.erb
@@ -3,7 +3,7 @@
   <dd><%= work.create_date || "-" %></dd>
   
   <dt>Description</dt>
-  <dd><%= work.description || "-" %></dd>
+  <dd><%= truncate(work.description, length: 80, separator: ' ') || "-" %></dd>
 
   <dt>Source</dt>
   <dd><%= work.source %></dd>
