Clean up pagination for search results

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -31,7 +31,7 @@
 <%= render_document_index @member_docs %>
 
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 col-md-push-3">
     <%= render 'paginate' %>
   </div>
 </div>
