--- a/app/views/generic_files/_attributes.html.erb
+++ b/app/views/generic_files/_attributes.html.erb
@@ -1,6 +1,6 @@
 <dl class="dl-horizontal">
   <dt>Date created</dt>
-  <dd><%= work.create_date || "-" %></dd>
+  <dd><%= work.date_created || "-" %></dd>
   
   <dt>Description</dt>
   <dd><%= truncate(work.description, length: 80, separator: ' ') || "-" %></dd>
