Remove stray % in ERB

--- a/app/views/collections/generic_file/_row.html.erb
+++ b/app/views/collections/generic_file/_row.html.erb
@@ -1,4 +1,4 @@
-<tr id="document_<%= member.id %>" %>
+<tr id="document_<%= member.id %>">
   <td><%= render_thumbnail_tag member %></td>
   <td>
    <%= render_partial_for 'metadata', member %>
