--- a/app/views/collections/_sort_and_per_page.html.erb
+++ b/app/views/collections/_sort_and_per_page.html.erb
@@ -3,28 +3,21 @@
     <%= render partial: 'collections/form_for_select_collection', locals: { user_collections: @user_collections }  %>
   </div>
 
-  <% if  params[:action] == "edit" %>
-  <div class="batch-toggle">
-     <% session[:batch_edit_state] = "on" %>
-    <%= button_for_remove_selected_from_collection @collection %>
-   </div>
-  <%end %>
    <div class="sort-toggle">
      <%# kind of hacky way to get this to work on catalog and folder controllers.  May be able to simple do {action: "index"} but I'm not sure -%>
-     <% unless @response.response['numFound'] < 2 %>
-        <%= form_tag collections.collection_path(@collection), method: :get, class: 'per_page form-inline' do %>
-             <fieldset class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-               <legend class="sr-only"><%= t('sufia.sort_label') %></legend>
-               <%= label_tag(:per_page) do %>
-                   <%= select_tag(:per_page, options_for_select(['10', '20', '50', '100'], h(params[:per_page])), title: "Number of results to display per page") %>
-                   per page
+      <%= form_tag collections.collection_path(@collection), method: :get, class: 'per_page form-inline' do %>
+         <div class="col-xs-12 col-md-6">
+           <div class="pull-left">
+             <ul class="dropdown-menu" role="menu">
+               <%- per_page_options_for_select.each do |(label, count)| %>
+                 <li><%= link_to(label, collections.collection_path(params_for_search(per_page: count))) %></li>
                <% end %>
-               <%= render_hash_as_hidden_fields(params_for_search.except(:per_page, :sort)) %>
-               <button class="btn btn-sm btn-info"><i class="glyphicon glyphicon-refresh"></i></button>
-             </fieldset>
+             </ul>
+            <%= render_hash_as_hidden_fields(params_for_search.except(:per_page, :sort)) %>
+            <button class="btn btn-sm btn-info">Update</button>
             <%= render 'paginate' %>
-            <%= render 'view_type_group' %>
-         <% end %>
+            <% console %>
+        </div>
       <% end unless sort_fields.empty? %>
    </div>
 </div>
