--- a/app/views/collections/_sort_and_per_page.html.erb
+++ b/app/views/collections/_sort_and_per_page.html.erb
@@ -3,21 +3,11 @@
     <%= render partial: 'collections/form_for_select_collection', locals: { user_collections: @user_collections }  %>
   </div>
 
-   <div class="sort-toggle">
-     <%# kind of hacky way to get this to work on catalog and folder controllers.  May be able to simple do {action: "index"} but I'm not sure -%>
-      <%= form_tag collections.collection_path(@collection), method: :get, class: 'per_page form-inline' do %>
-         <div class="col-xs-12 col-md-6">
-           <div class="pull-left">
-             <ul class="dropdown-menu" role="menu">
-               <%- per_page_options_for_select.each do |(label, count)| %>
-                 <li><%= link_to(label, collections.collection_path(params_for_search(per_page: count))) %></li>
-               <% end %>
-             </ul>
-            <%= render_hash_as_hidden_fields(params_for_search.except(:per_page, :sort)) %>
-            <button class="btn btn-sm btn-info">Update</button>
-            <%= render 'paginate' %>
-            <% console %>
-        </div>
-      <% end unless sort_fields.empty? %>
-   </div>
+     <div class="col-xs-12 col-md-6">
+       <%= render "per_page_widget" %>
+       <%= render "sort_widget" %>
+
+       <%= render 'paginate' %>
+        <% console %>
+     </div>
 </div>
