Only show console in development

--- a/app/views/collections/_sort_and_per_page.html.erb
+++ b/app/views/collections/_sort_and_per_page.html.erb
@@ -8,6 +8,6 @@
        <%= render "sort_widget" %>
 
        <%= render 'paginate' %>
-        <% console %>
+        <% console if Rails.env == "development" %>
      </div>
 </div>
