--- a/app/views/collections/_search_form.html.erb
+++ b/app/views/collections/_search_form.html.erb
@@ -1,10 +1,14 @@
-<div class="col-span-xs-12 col-span-md-3">
-  <%= form_for([collections, @collection], :method => :get) do %> 
-
-      <label class="accessible-hidden">Search Collection <%=@collection.title %></label>
-      <%= text_field_tag :cq, params[:cq], :class => "form-control", :size => '30', :type => "search", :id => "collection_search" %>
-      <%= hidden_field_tag :sort, params[:sort], :id => 'collection_sort' %>
+<div class="col-xs-12 col-sm-6">
+  <%= form_for([collections, @collection], method: :get, 
+        html: { class: "form-inline" }) do %> 
+    <label class="sr-only" for="collection_search">Search Collection <%= @collection.title %></label>
+    <div class="input-group col-xs-12">
+      <%= text_field_tag :cq, params[:cq], class: "form-control", type: "search", id: "collection_search" %>
+      <%= hidden_field_tag :sort, params[:sort], id: 'collection_sort' %>
       <%= render_hash_as_hidden_fields(params_for_search.except(:cq, :sort, :qt, :page)).html_safe %>
-      <button type="submit" class="btn btn-primary" id="collection_submit"><i class="fa fa-search"></i> </button>
+      <div class="input-group-btn">
+        <button type="submit" class="btn btn-primary" id="collection_submit"><i class="fa fa-search"></i> Search</button>
+      </div>
+    </div>
   <% end %>
 </div>
