--- a/app/views/collections/_sort_and_per_page.html.erb
+++ b/app/views/collections/_sort_and_per_page.html.erb
@@ -3,11 +3,10 @@
     <%= render partial: 'collections/form_for_select_collection', locals: { user_collections: @user_collections }  %>
   </div>
 
-     <div class="col-xs-12 col-md-6">
+     <div class="col-xs-12 col-sm-6">
        <%= render "per_page_widget" %>
        <%= render "sort_widget" %>
 
        <%= render 'paginate' %>
-        <% console if Rails.env == "development" %>
      </div>
 </div>
