--- a/app/views/collections/_attributes.html.erb
+++ b/app/views/collections/_attributes.html.erb
@@ -1,10 +1,10 @@
 <dl class="dl-horizontal">
   <dt>Date created</dt>
-  <dd><%= work.date_created.present? ? work.date_created : "-" %></dd>
+  <dd><%= @presenter.date_created %></dd>
   
   <dt>Description</dt>
-  <dd><%= work.description || "-" %></dd>
+  <dd><%= @presenter.description %></dd>
 
   <dt>Members</dt>
-  <dd><%= work.members.count %></dd>
+  <dd><%= @presenter.members_count %></dd>
 </dl>
