--- a/app/views/collections/collection/_row.html.erb
+++ b/app/views/collections/collection/_row.html.erb
@@ -1,8 +1,8 @@
-<tr id="document_<%= member.id %>" %>
-  <td><%= link_to render_collection_thumbnail(member), collections.collection_path(member) %></td>
+<tr id="document_<%= model.id %>" %>
+  <td><%= link_to render_collection_thumbnail(model.thumbnail, model.model), collections.collection_path(model.id) %></td>
   <td>
-    <%= render_partial_for 'metadata', member %>
+    <%= render_partial_for 'metadata', model %>
   </td>
-  <td><%= member.date_created || "-" %> </td>
+  <td><%= model.date_created %>
   <td>&nbsp;</td>
 </tr>
