--- a/app/views/collections/generic_file/_actions.html.erb
+++ b/app/views/collections/generic_file/_actions.html.erb
@@ -3,10 +3,10 @@
   <ul class="dropdown-menu dropdown-menu-right">
     <li>
       <%= link_to raw('<i class="glyphicon glyphicon-link over"></i> Single-Use Link to File'), '#',
-                  class: "copypaste itemicon itemcode", title: "Single-Use Link to File", id: "copy_link_#{member.id}" %>
+                  class: "copypaste itemicon itemcode", title: "Single-Use Link to File", id: "copy_link_#{model.id}" %>
     </li>
     <li>
-      <%= link_to raw('<i class="glyphicon glyphicon-download-alt"></i> Download File'), sufia.download_path(member.id),
+      <%= link_to raw('<i class="glyphicon glyphicon-download-alt"></i> Download File'), sufia.download_path(model.id),
                   class: 'itemicon itemdownload', title: 'Download File', target: '_new' %>
     </li>
   </ul>
