--- a/app/views/collections/generic_file/_row.html.erb
+++ b/app/views/collections/generic_file/_row.html.erb
@@ -1,8 +1,6 @@
-<tr id="document_<%= member.id %>">
-  <td><%= render_thumbnail_tag member %></td>
-  <td>
-   <%= render_partial_for 'metadata', member %>
-  </td>
-  <td><%= member.date_created || "-" %></td>
-  <td><%= render_partial_for 'actions', member %></td>
+<tr id="document_<%= model.id %>">
+  <td><%= render_thumbnail_tag model.model %></td>
+  <td><%= render_partial_for 'metadata', model %></td>
+  <td><%= model.date_created %></td>
+  <td><%= render_partial_for 'actions', model %></td>
 </tr>
