--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -3,7 +3,7 @@
 
 <div itemscope itemtype="http://schema.org/CollectionPage" class="row">
   <div class="col-sm-2">
-    <%= render partial: 'collections/media_display', locals: { generic_file: @collection } %>
+    <%= render partial: 'collections/media_display' %>
   </div>
   <div class="col-sm-10">
     <header>
@@ -18,7 +18,6 @@
     <%= render 'sort_and_per_page' %>
     <%= render "search_form" %>
 </div>
-
 
 <%= render_document_index @member_docs %>
 
