Reimplement pagination and clean up UI

--- a/app/views/collections/_search_form.html.erb
+++ b/app/views/collections/_search_form.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-6">
+<div class="col-xs-12 col-sm-offset-2 col-sm-9">
   <%= form_for([collections, @collection], method: :get, 
         html: { class: "form-inline" }) do %> 
     <label class="sr-only" for="collection_search">Search Collection <%= @collection.title %></label>
