--- a/app/views/collections/_sort_and_per_page.html.erb
+++ b/app/views/collections/_sort_and_per_page.html.erb
@@ -3,10 +3,9 @@
     <%= render partial: 'collections/form_for_select_collection', locals: { user_collections: @user_collections }  %>
   </div>
 
-     <div class="col-xs-12 col-sm-6">
-       <%= render "per_page_widget" %>
-       <%= render "sort_widget" %>
-
-       <%= render 'paginate' %>
-     </div>
+   <div class="col-xs-12 col-sm-offset-2 col-sm-4">
+     <%= render "per_page_widget" %>
+     <%= render "sort_widget" %>
+   </div>
+   <%= render "paginate" %>
 </div>
