--- a/app/views/generic_files/show.html.erb
+++ b/app/views/generic_files/show.html.erb
@@ -1,3 +1,5 @@
+<%= console %>
+
 <%= render_breadcrumbs builder: Sufia::BootstrapBreadcrumbsBuilder %>
 <div class="container-fluid">
 <div class="row">
