--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -4,8 +4,16 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="input-group">
+          <span class="input-group-addon for-search-field">
+            <label for="search_field" class="sr-only">Search field(s)</label>
+            <%= select_tag(:search_field,
+                options_for_select(search_fields, h(params[:search_field])),
+                title: "Limit search to",
+                id: "search_field",
+                class: "search_field") %>
+          </span>
 
-          <label class="sr-only" for="search-field-header"><%= t("sufia.search.form.q.label") %></label>
+          <label class="sr-only" for="q"><%= t("sufia.search.form.q.label") %></label>
           <%= text_field_tag :q, current_search_parameters , class: "q form-control", id: "search-field-header", placeholder: t("sufia.search.form.q.placeholder") %>
 
           <div class="input-group-btn">
