--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -14,8 +14,7 @@
   </div>
 </div>
 
-<div class="row">
-    <%= render "search_form" %>
+<div class="row for-sort-and-display">
     <%= render 'sort_and_per_page' %>
 </div>
 
