--- a/app/views/kaminari/bootstrap3/_first_page.html.erb
+++ b/app/views/kaminari/bootstrap3/_first_page.html.erb
@@ -1,6 +1,3 @@
-<% html_class = current_page.first? ? "disabled" : "" %>
-
 <li>
-  <%= link_to fa_icon("step-backward"), url, 
-       class: html_class, :remote => remote %> 
+  <%= link_to "1", url, remote: remote %> 
 </li>
