--- a/app/views/catalog/_sort_and_per_page.html.erb
+++ b/app/views/catalog/_sort_and_per_page.html.erb
@@ -1,17 +1,13 @@
 <div id="sortAndPerPage" class="row">
-  <div class="col-xs-12 col-md-6">
+  <div class="col-xs-12 col-sm-5">
     <div class="btn-group" id="per_page-dropdown" role="group">
       <%= render "per_page_widget" %>
-      <%= paginate @response, 
-          page_entries_info: page_entries_info(@response),
-          theme: "bootstrap3_compact" %> 
+      <%= render "sort_widget" %>
     </div>
   </div>
-  
-  <div class="col-xs-12 col-md-6">
-    <div class="pull-right">
-      <%= render "sort_widget" %>
-      <%= render "view_type_group" %>
-    </div>
+ 
+  <div class="col-xs-12 col-sm-offset-1 col-sm-6 pull-right">
+     <%= render "paginate" %>
+     <%= render "view_type_group" %>
   </div>
 </div>
