--- a/app/views/collections/_sort_and_per_page.html.erb
+++ b/app/views/collections/_sort_and_per_page.html.erb
@@ -3,9 +3,13 @@
     <%= render partial: 'collections/form_for_select_collection', locals: { user_collections: @user_collections }  %>
   </div>
 
-   <div class="col-xs-12 col-sm-offset-2 col-sm-4">
-     <%= render "per_page_widget" %>
-     <%= render "sort_widget" %>
-   </div>
-   <%= render "paginate" %>
+  <div class="col-xs12 col-sm-offset-2 col-sm-5">
+    <%= render "paginate" %>
+  </div>
+
+  <div class="col-xs-8 col-sm-3">
+    <%= render "per_page_widget" %>
+    <%= render "sort_widget" %>
+  </div>
+  <%= render "view_type_group" %>
 </div>
