--- a/app/views/collections/_view_type_group.html.erb
+++ b/app/views/collections/_view_type_group.html.erb
@@ -1,5 +1,5 @@
 <% if has_alternative_views? -%>
-<div class="view-type col-xs-12 col-sm-3 col-md-3">
+<div class="view-type col-xs-4 col-sm-2">
   <span class="sr-only"><%= t('blacklight.search.view_title') %></span>
   <div class="view-type-group btn-group pull-right">
     <%  document_index_views.each do |view, config| %>
