--- a/app/views/kaminari/bootstrap3/_paginator.html.erb
+++ b/app/views/kaminari/bootstrap3/_paginator.html.erb
@@ -1,13 +1,19 @@
 <%= paginator.render do -%>
   <ul class="pagination">
-    <%= first_page_tag %>
     <%= prev_page_tag %>
+
     <% each_page do |page| -%>
-      <% if page.left_outer? || page.right_outer? || page.inside_window? -%>
+      <% if page.left_outer? %>
         <%= page_tag page %>
-      <% end -%>
+        <%= gap_tag %>
+      <% elsif page.inside_window? %>
+        <%= page_tag page %>
+      <% elsif page.right_outer? %>
+        <%= gap_tag %>
+        <%= page_tag page %>
+      <% end %>      
     <% end -%>
+
     <%= next_page_tag %>
-    <%= last_page_tag %>
   </ul>
 <% end -%>
