--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -20,8 +20,6 @@
 
 <%= render_document_index @member_docs %>
 
-<div class="row">
-  <div class="col-xs-12 col-md-push-3">
-    <%= render 'paginate' %>
-  </div>
+<div class="col-xs-12">
+  <%= render 'paginate_centered' %>
 </div>
