--- a/app/views/catalog/_paginate.html.erb
+++ b/app/views/catalog/_paginate.html.erb
@@ -1,8 +1,7 @@
-<% if show_pagination? %>
-  <div class="pager">
-    <%= paginate @response, 
-         theme: 'bootstrap3',
-         window: 1 %>
-  </div><!-- /pager -->
-<% end %>
-
+<div class="pager">
+  <% if @response.total_pages > 1 %>
+      <%= paginate @response, window: 1, outer_window: 1, theme: 'bootstrap3' %>
+  <% else %>
+    <span class="pagination"><%= page_entries_info(@response, entry_name: "items") %></span>
+  <% end %>
+</div><!-- /pager -->
