--- a/app/views/catalog/_per_page_widget.html.erb
+++ b/app/views/catalog/_per_page_widget.html.erb
@@ -6,7 +6,7 @@
   </button>
   <ul class="dropdown-menu" role="menu">
     <%- per_page_options_for_select.each do |(label, count)| %>
-      <li><%= link_to(label, url_for(params_for_search(:per_page => count))) %></li>
+      <li><%= link_to label, url_for(params_for_search(per_page: count)) %></li>
     <%- end -%>
   </ul>
 <% end %>
