--- a/app/views/collections/_sort_widget.html.erb
+++ b/app/views/collections/_sort_widget.html.erb
@@ -1,8 +1,10 @@
         <div id="sort-dropdown" class="btn-group">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= current_sort_field.label %></button>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= raw(current_sort_field.label) %></button>
           <ul class="dropdown-menu">
             <% active_sort_fields.each do |key, sort_order| %>
-              <li><%= link_to sort_order.label, collections.collection_path(@collection, per_page: current_per_page, sort: key) %></li>
+              <li>
+                <%= link_to raw(sort_order.label), collections.collection_path(@collection, params_for_search(sort: key)) %>
+              </li>
             <% end %>
           </ul>
         </div>
