Performance and interface tweaks based on meeting
* Alter UI for gallery browse to include date created
* Add top level collection facet
* Separate capture_device (FITS) from external metadata

--- a/app/views/generic_files/_show_descriptions.html.erb
+++ b/app/views/generic_files/_show_descriptions.html.erb
@@ -4,7 +4,17 @@
     <% if r.value(term).present? %>
     <tr>
       <th><%= r.label(term) %></th>
-      <td><%= r.value(term) %></td>
+      <td>
+        <% if r.value(term).is_a? Array %>
+          <ul>
+          <% r.value(term).each do |val| %>
+            <li><%= val %></li>
+          <% end %>
+          </ul>
+        <% else %>
+          <%= r.value(term) %>
+        <% end %>
+      </td>
     </tr>
     <% end %>
   <% end %>
