Allow for multivalued terms to be a list

--- a/app/views/generic_files/_show_descriptions.html.erb
+++ b/app/views/generic_files/_show_descriptions.html.erb
@@ -4,17 +4,7 @@
     <% if r.value(term).present? %>
     <tr>
       <th><%= r.label(term) %></th>
-      <td>
-        <% if r.value(term).is_a? Array %>
-          <ul>
-          <% r.value(term).each do |val| %>
-            <li><%= val %></li>
-          <% end %>
-          </ul>
-        <% else %>
-          <%= r.value(term) %>
-        <% end %>
-      </td>
+      <td><%= r.value(term) %></td>
     </tr>
     <% end %>
   <% end %>
