--- a/app/views/generic_files/_show_collections.html.erb
+++ b/app/views/generic_files/_show_collections.html.erb
@@ -3,10 +3,14 @@
         <p><%= t('sufia.file.collections_list.empty') %></p>
     <% else %>
       <ul class="list-unstyled">
-      <% @generic_file.collections.each do |c| %>
-        <%= content_tag :li, class: 'attribute title', data: { id: c.id } do %>
-          <%= link_to c.title, collections.collection_path(c) %>
+        <% @generic_file.part_of.each do |c| %>
+          <li><%= c %></li>
         <% end %>
-      <% end %>
+
+        <% @generic_file.collections.each do |c| %>
+          <%= content_tag :li, class: 'attribute title', data: { id: c.id } do %>
+            <%= link_to c.title, collections.collection_path(c) %>
+          <% end %>
+        <% end %>
       </ul>
     <% end %>
