--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -3,7 +3,7 @@
 
 <div itemscope itemtype="http://schema.org/CollectionPage" class="row">
   <div class="col-sm-2">
-    <%= render partial: 'collections/media_display' %>
+    <%= render partial:'collections/media_display', locals: {resource: @collection} %>
   </div>
   <div class="col-sm-10">
     <header>
