--- a/app/views/collections/collection/_metadata.html.erb
+++ b/app/views/collections/collection/_metadata.html.erb
@@ -1,9 +1,3 @@
 <h3><%= link_to model.title, collections.collection_path(model.id) %></h3>
-<p><%= model.description %>
-<dl class="dl-horizontal">
-  <dt>Items</dt>
-  <dd><%= model.member_count %></dd>
- 
-  <dt>Size<dt/>
-  <dd><%= model.bytes %>
-</dl>
+<p><%= model.description %></p>
+<h3><%= model.member_count %> items</h3>
