--- a/app/views/catalog/_sort_and_per_page.html.erb
+++ b/app/views/catalog/_sort_and_per_page.html.erb
@@ -1,4 +1,8 @@
 <div id="sortAndPerPage" class="row">
+  <div class="col-xs-12" id="total_results">
+    <h2><%= @response.total_count %> matches found</h2>
+  </div>
+
   <div class="col-xs-12 col-sm-5">
     <%= render "paginate" %>
   </div>
