--- a/app/views/generic_files/_show_collections.html.erb
+++ b/app/views/generic_files/_show_collections.html.erb
@@ -12,5 +12,7 @@
             <%= link_to c.title, collections.collection_path(c) %>
           <% end %>
         <% end %>
+
+        <%= link_to @generic_file.administrative_collection.title, catalog_index_path(collection_params_for_catalog(@generic_file.administrative_collection.title)) if @generic_file.administrative_collection.present? %>
       </ul>
     <% end %>
