--- a/app/views/generic_files/show.html.erb
+++ b/app/views/generic_files/show.html.erb
@@ -10,6 +10,7 @@
     <h1 class="visibility"><%= @presenter.title %></h1>
     <p class="genericfile_description"><%= @presenter.description %></p>
     <%= render 'show_descriptions' %>
+    <%= render 'show_conservation_metadata' %>
     <%= render 'show_details' %>
     <%= render 'show_audits' %>
   </div><!-- /columns second -->
