Add new image processors based on VIPS for faster performance

--- a/app/assets/stylesheets/cma_archives.scss
+++ b/app/assets/stylesheets/cma_archives.scss
@@ -93,6 +93,10 @@
   .collection-icon {
     text-align: left;
   }
+
+  figure {
+    max-width: 100%;
+  }
 }
 
 /* Reset over Sufia's defaults */
