--- a/app/views/catalog/_index_gallery.html.erb
+++ b/app/views/catalog/_index_gallery.html.erb
@@ -1,7 +1,7 @@
 <%# Override Blacklight defaults %>
 <div class="document">
   <figure>
-    <%= render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
+    <%= render_thumbnail_tag(document, {class: "img-responsive"}, :counter => document_counter_with_offset(document_counter)) %>
     <figcaption>
       <%= render_document_partials document, blacklight_config.view_config(:gallery).partials %>
     </figcaption>
